--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   
   hidden_drawer_menu : ^3.0.1
+  percent_indicator: 
+  shared_preferences: 
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
